Fix calendar page overflow
The calendar page was not displaying the end of the content. This commit fixes the overflow issue.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -89,6 +90,8 @@
 
   #root {
     height: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
 
